[metadata]
# replace with your username:
name = pelt-testing
version = 0.1
author = Luis Rosario
author_email = luisprooc@gmail.com
description = Este paquete nos permite testear algoritmos y generar datos de prueba para lo anteriormente dicho
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luisprooc/pelt-testing
project_urls =
    Bug Tracker = https://github.com/luisprooc/pelt-testing/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent Environment :: Console

[options]
packages = find:
python_requires = >=3.6